--- a/server/views/vis.hbs
+++ b/server/views/vis.hbs
@@ -1,8 +1,25 @@
-<h1>hallo</h1>
-<form action="/api" method="get">
-    <input type="text" name="value1">
-      <input type="text" name="value2">
+<h1>Vissualisation</h1>
+
+
+<section>
+  <h2>Lisa</h2>
+  <div class="{{data.lisa}} status"></div>
+</section>
+
+<section>
+  <h2>Senny</h2>
+  <div class="{{data.senny}} status"></div>
+</section>
+<section>
+  <h2>Matthias</h2>
+  <div class="{{data.matthias}} status"></div>
+</section>
+
+<form action="/api" method="post">
+    <input type="text" name="lisa" placeholder="lisa">
+    <input type="text" name="senny" placeholder="senny">
+    <input type="text" name="matthias" placeholder="matthias">
     <button type="submit">
-        <span>Search</span>
+        POST
     </button>
 </form>
