--- a/server/views/leds.hbs
+++ b/server/views/leds.hbs
@@ -1,16 +1,15 @@
 <h1>Vissualisation</h1>
-<section>
+<section class="leds">
     <h2>Lisa</h2>
-    <div class="{{data.lisa}} status"></div>
+    <div class="{{data.lisa.led}} status"></div>
 </section>
-
-<section>
+<section class="leds">
     <h2>Senny</h2>
-    <div class="{{data.senny}} status"></div>
+    <div class="{{data.senny.led}} status"></div>
 </section>
-<section>
+<section class="leds">
     <h2>Matthias</h2>
-    <div class="{{data.matthias}} status"></div>
+    <div class="{{data.matthias.led}} status"></div>
 </section>
 
 <form action="/api" method="post">
