update so the server and client so there is abbilaty to add more data from differnt sensors

--- a/server/views/leds.hbs
+++ b/server/views/leds.hbs
@@ -25,6 +25,10 @@
         <option value="true">ON</option>
         <option value="false">OFF</option>
     </select>
+    <select name="matthiasValue1">
+      <option value="1">ON</option>
+      <option value="0">OFF</option>
+    </select>
     <button type="submit">
         Update
     </button>
