--- a/server/views/sensors.hbs
+++ b/server/views/sensors.hbs
@@ -1,5 +1,8 @@
 <section>
     <h1>Sensors</h1>
+          <div id="chart"></div>
+
+
     <small>{{data.time}}</small>
     <section>
       <h2>Lisa</h2>
@@ -15,6 +18,7 @@
     </section>
     <section>
       <h2>Matthias</h2>
+
       <p>led: {{data.matthias.led}}</p>
       <p>temperature: {{data.matthias.value1}}  C&ordm;</p>
       <p>light: {{data.matthias.value2}}</p>
