--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Data">
     <meta name="description" content="data">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/c3.min.css">
     <title>Data | {{title}}</title>
 </head>
 
@@ -23,5 +24,9 @@
 
     </footer>
 </body>
+  <script type="text/javascript" src="/js/d3.v3.min.js"></script>
+  <script type="text/javascript" src="/js/c3.min.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
+
 
 </html>
