--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-
+        <h1>Be productive</h1>
     </header>
     <main>
         {{{body}}}
@@ -24,9 +24,9 @@
 
     </footer>
 </body>
-  <script type="text/javascript" src="/js/d3.v3.min.js"></script>
-  <script type="text/javascript" src="/js/c3.min.js"></script>
-  <script type="text/javascript" src="/js/app.js"></script>
+<script type="text/javascript" src="/js/d3.v3.min.js"></script>
+<script type="text/javascript" src="/js/c3.min.js"></script>
+<script type="text/javascript" src="/js/app.js"></script>
 
 
 </html>
