Commit to server

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,19 +9,19 @@
     <meta name="description" content="data">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/c3.min.css">
-    <title>Data | {{title}}</title>
+    <title>Productivity homework</title>
 </head>
 
 <body>
-    <header>
-        <h1>Be productive</h1>
+    <header id="header">
+        <h1>Be productive at doing your homework</h1>
     </header>
-    <main>
+    <main id="main">
         {{{body}}}
     </main>
 
-    <footer>
-
+    <footer id="footer">
+        <p>Made by: Senny Kalidien</p>
     </footer>
 </body>
 <script type="text/javascript" src="/js/d3.v3.min.js"></script>
