--- a/public/src/css/main.css
+++ b/public/src/css/main.css
@@ -1,32 +1,77 @@
+/*--------------------------------------------------------------
+# STRUCTURE
+--------------------------------------------------------------*/
 body {
     width: 100%;
     font-family: helvetica, sans-serif;
 }
-main {
+
+#header {
+    background: #ececec;
+    text-align: center;
+    padding: 1em;
+}
+
+#main {
     width: 100%;
     min-width: 13em;
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
+    padding: 1em;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;;
 }
-.none,
-.disabled {
+
+#footer {
+    background: #ececec;
+    text-align: center;
+    padding: 1em;
+}
+
+/*--------------------------------------------------------------
+## CONTENT
+--------------------------------------------------------------*/
+.none, .disabled {
     display: none !important;
 }
-.leds{
-  display: inline-block;
+
+section {
+    margin: 0 0 1em;
 }
 
-.status{
-  display: inline-block;
-  height: 100px;
-  width: 100px;
+.chart {
+    flex: 1 0 100%;
 }
 
-.red{
-  background: rgb(255, 3, 3);
+.chart h2 {
+    text-align: center;
 }
-.orange {
-  background: rgb(255,127,80);
+
+.leds {
+    display: inline-block;
+    flex: 0 1 21em;
+    background: #f9f9f9;
+    padding: 1em;
 }
-.green{
-  background: rgb(70, 198, 43);
+
+.leds .status {
+    display: inline-block;
+    height: 100px;
+    width: 100%;
+    background: #f9f9f9;
+}
+.leds .red {
+    background: rgb(255, 3, 3);
+}
+.leds .orange {
+    background: rgb(255, 127, 80);
+}
+.leds .green {
+    background: rgb(70, 198, 43);
+}
+
+.sensors {
+    flex: 0 1 20em;
+    background: #f9f9f9;
+    padding: 1em;
 }
