Changed  color to yellow

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -9,7 +9,7 @@
     <form action="/api" method="post">
         <select name="output">
             <option value="red">Time for a break!</option>
-            <option value="orange">Almost time for a break...</option>
+            <option value="yellow">Almost time for a break...</option>
             <option value="green">Let's be productive!</option>
         </select>
         <button type="submit">
