First attempt at logic

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -23,6 +23,6 @@
         <h2>Status ESP</h2>
         <p>Time updated: {{data.time}}</p>
         <p>Color led: {{data.output.led}}</p>
-        <p>Distance sensor: {{data.input.distance}} CM</p>
+        <p>Distance person: {{data.input.distance}} CM</p>
     </section>
 </section>
