--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,12 +9,12 @@
     <meta name="description" content="data">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/c3.min.css">
-    <title>Productivity homework</title>
+    <title>Dashboard IoT</title>
 </head>
 
 <body>
     <header id="header">
-        <h1>Dashboard</h1>
+        <h1>Dashboard IoT</h1>
     </header>
 
     <nav id="nav">
