--- a/views/main.hbs
+++ b/views/main.hbs
@@ -10,7 +10,7 @@
 
 
 <section class="statusOutput">
-    <h2>Status LED on board</h2>
+    <h2>Code color</h2>
     <div class="{{data.output.led}} status"></div>
 </section>
 
