--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -1,6 +1,6 @@
 <section class="settingsOutput">
     <header>
-        <h2>Change code color</h2>
+        <h2>Change code alert color</h2>
     </header>
     <form action="/api" method="post">
         <button name="output" class="red" value="red">Danger!</button>
